--- a/project/TestPlugin/AndroidManifest.xml
+++ b/project/TestPlugin/AndroidManifest.xml
@@ -4,7 +4,9 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="23"/>
-    <uses-permission android:name="com.jpush.unity3dplugin.permission.JPUSH_MESSAGE" />
+    <!--<permission android:name="com.jpush.unity3dplugin.permission.JPUSH_MESSAGE" />-->
+    <permission android:name="com.szjzwl.xytx.tt.permission.JPUSH_MESSAGE" />
+    <uses-permission android:name="com.szjzwl.xytx.tt.permission.JPUSH_MESSAGE" />
     <application android:name="com.morgoo.droidplugin.PluginApplication" android:label="@string/app_name"
                  android:icon="@drawable/ic_launcher" android:theme="@style/AppTheme">
         <activity
