--- a/project/jpushdemo/build.gradle
+++ b/project/jpushdemo/build.gradle
@@ -5,7 +5,7 @@ android {
         jpushdemo {
             keyAlias 'jpushdemo'
             keyPassword '123456'
-            storeFile file('jpush')
+            storeFile file('jpushdemo.jks')
             storePassword '123456'
         }
     }
@@ -31,7 +31,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.jpushdemo
         }
