--- a/project/settings.gradle
+++ b/project/settings.gradle
@@ -1,4 +1,5 @@
 include ':Libraries:DroidPlugin'
 include ':TestPlugin'
 include ':Test:ApiTest'
+include ":jpushdemo"
 rootProject.name = 'DroidPlugin'
