--- a/project/TestPlugin/build.gradle
+++ b/project/TestPlugin/build.gradle
@@ -74,6 +74,7 @@ android {
 //    tasks.withType(JavaCompile) {
 //        compileTask -> compileTask.dependsOn(nativeLibsToJar)
 //    }
+    buildToolsVersion '25.0.0'
 }
 
 //
