--- a/project/jpushdemo/src/main/AndroidManifest.xml
+++ b/project/jpushdemo/src/main/AndroidManifest.xml
@@ -32,6 +32,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".JPushService"
+            android:enabled="true"
+            android:exported="false"></service>
     </application>
 
 </manifest>
