--- a/project/jpushdemo/build.gradle
+++ b/project/jpushdemo/build.gradle
@@ -17,16 +17,16 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-        ndk {
-            abiFilters "armeabi", "armeabi-v7a", "mpis", "x86"
-        }
+//        ndk {
+//            abiFilters "armeabi", "armeabi-v7a", "mpis", "x86"
+//        }
         manifestPlaceholders = [
                 GETUI_APP_ID    : "GETUI_APP_ID",
                 GETUI_APP_KEY   : "GETUI_APP_KEY",
                 GETUI_APP_SECRET: "GETUI_APP_SECRET",
                 PACKAGE_NAME    : applicationId
         ]
-//        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
     buildTypes {
@@ -44,6 +44,6 @@ dependencies {
     //        exclude group: 'com.android.support', module: 'support-annotations'
     //    })
     compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.getui:sdk:2.9.0.0'
+//    compile 'com.getui:sdk:2.9.0.0'
     testCompile 'junit:junit:4.12'
 }
