--- a/project/settings.gradle
+++ b/project/settings.gradle
@@ -1,4 +1,4 @@
-include ':Libraries:DroidPlugin'
+include ':Libraries:DroidPlugin', ':demo'
 include ':TestPlugin'
 include ':Test:ApiTest'
 include ":jpushdemo"
