--- a/project/demo/build.gradle
+++ b/project/demo/build.gradle
@@ -40,10 +40,14 @@ dependencies {
     })
     compile project(':Libraries:DroidPlugin')
     //    compile 'org.apache.commons:commons-io:1.3.2'
+    //    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+    
+
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.liulishuo.filedownloader:library:1.3.0'
     compile 'io.reactivex:rxjava:1.2.2'
     compile 'io.reactivex:rxandroid:1.2.1'
-//    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+    compile 'com.squareup.okhttp3:okhttp:3.4.2'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     testCompile 'junit:junit:4.12'
 }
