--- a/project/TestPlugin/build.gradle
+++ b/project/TestPlugin/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 dependencies {
-    compile "com.android.support:support-v4:23.1.1"
-    compile "com.android.support:gridlayout-v7:23.1.1"
-    compile "com.android.support:cardview-v7:23.1.1"
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile "com.android.support:support-v4:${rootProject.ext.libraryVersion}"
+    compile "com.android.support:gridlayout-v7:$rootProject.ext.libraryVersion"
+    compile "com.android.support:cardview-v7:$rootProject.ext.libraryVersion"
+    compile "com.android.support:appcompat-v7:$rootProject.ext.libraryVersion"
+    compile "com.android.support:design:$rootProject.ext.libraryVersion"
 
     compile fileTree(dir: 'libs', include: '*.jar')
     compile project(':Libraries:DroidPlugin')
@@ -14,6 +14,7 @@ dependencies {
 
 android {
     defaultConfig {
+        applicationId "com.example.TestPlugin"
         ndk {
             moduleName "placeholder"
         }
