--- a/project/build.gradle
+++ b/project/build.gradle
@@ -9,9 +9,11 @@ buildscript {
 }
 
 ext {
-    compileSdkVersion = 25
+    compileSdkVersion = 23
     buildToolsVersion = "23.0.1"
+    libraryVersion = "23.1.1"
 }
+
 
 allprojects {
     repositories {
