--- a/project/Libraries/DroidPlugin/AndroidManifest.xml
+++ b/project/Libraries/DroidPlugin/AndroidManifest.xml
@@ -31,8 +31,11 @@
     android:versionName="1.0">
 
     <uses-sdk android:minSdkVersion="9" />
+
+
+
     <!--<uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />-->
-    <uses-permission android:name="android.permission.READ_SMS" />
+    <!--<uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
     <uses-permission android:name="android.permission.READ_LOGS" />
@@ -73,7 +76,7 @@
     <uses-permission android:name="android.permission.BIND_ACCESSIBILITY_SERVICE" />
     <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS"
         tools:ignore="ProtectedPermissions" />
-    <!--预申请很多权限。也是为了插件使用-->
+    &lt;!&ndash;预申请很多权限。也是为了插件使用&ndash;&gt;
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -199,7 +202,7 @@
     <uses-permission android:name="android.permission.BATTERY_STATS" />
     <uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />
     <uses-permission android:name="com.qihoo.appstore.rtservice.ACCESS_RTSERVICE" />
-    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />-->
 
 
     <application>
