--- a/project/demo/build.gradle
+++ b/project/demo/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     testCompile 'junit:junit:4.12'
+    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.0@aar'
 }
