update permission requesting

--- a/project/demo/src/main/AndroidManifest.xml
+++ b/project/demo/src/main/AndroidManifest.xml
@@ -2,8 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.wkswind.demo">
 
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="com.jpush.unity3dplugin.permission.JPUSH_MESSAGE" />
     <uses-permission android:name="com.szjzwl.xytx.tt.permission.JPUSH_MESSAGE" />
+
+    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
 
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
