--- a/project/demo/build.gradle
+++ b/project/demo/build.gradle
@@ -43,12 +43,12 @@ dependencies {
     //    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     
 
-    compile 'com.android.support:appcompat-v7:25.0.1'
+//    compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.liulishuo.filedownloader:library:1.3.0'
     compile 'io.reactivex:rxjava:1.2.2'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+//    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     testCompile 'junit:junit:4.12'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.0@aar'
 }
