--- a/project/demo/src/main/AndroidManifest.xml
+++ b/project/demo/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="com.jpush.unity3dplugin.permission.JPUSH_MESSAGE" />
     <uses-permission android:name="com.szjzwl.xytx.tt.permission.JPUSH_MESSAGE" />
 
-    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
+    <!--<uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />-->
 
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -48,7 +48,7 @@
     <application
         android:name=".DemoApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -65,7 +65,6 @@
             android:name=".InstallActivity"
             android:screenOrientation="landscape"
             android:theme="@style/AppThemeFullscreen" />
-        <activity android:name=".GalleryActivity"></activity>
     </application>
 
 </manifest>
