--- a/project/demo/build.gradle
+++ b/project/demo/build.gradle
@@ -1,20 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-
     compileOptions {
         incremental true
     }
-
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
         }
     }
-
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
-
     defaultConfig {
         applicationId "com.wkswind.demo"
         minSdkVersion 15
@@ -29,6 +25,13 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
+    }
+    productFlavors {
+        belowM {
+            minSdkVersion 15
+            targetSdkVersion 22
+        }
     }
 }
 
@@ -41,14 +44,16 @@ dependencies {
     compile project(':Libraries:DroidPlugin')
     //    compile 'org.apache.commons:commons-io:1.3.2'
     //    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
-    
-
-//    compile 'com.android.support:appcompat-v7:25.0.1'
+    //    compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.liulishuo.filedownloader:library:1.3.0'
     compile 'io.reactivex:rxjava:1.2.2'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
-//    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+    //    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     testCompile 'junit:junit:4.12'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.0@aar'
+
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 }
