--- a/project/demo/build.gradle
+++ b/project/demo/build.gradle
@@ -17,7 +17,7 @@ android {
         targetSdkVersion 25
         versionCode 2
         versionName "1.1"
-
+        setProperty("archivesBaseName",  "cqxx-$versionName")
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
