--- a/project/demo/build.gradle
+++ b/project/demo/build.gradle
@@ -17,23 +17,46 @@ android {
         targetSdkVersion 25
         versionCode 2
         versionName "1.1"
-        setProperty("archivesBaseName",  "cqxx-$versionName")
+        setProperty("archivesBaseName", "cqxx-$versionName")
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            buildConfigField("String","CHANNEL","\"DEBUG\"")
+            buildConfigField("String","DOWNLOAD_URL","\"https://l.pic.wemepi.com/data.x/spread/app/cqxx/00001037.apk?t=1479354618\"")
+        }
         release {
-            minifyEnabled false
+            shrinkResources true
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
     }
-    productFlavors {
-        belowM {
-            minSdkVersion 21
-            targetSdkVersion 22
+
+    def file = new File("./demo/flavors.txt");
+    def map = [:];
+    file.eachLine { line ->
+
+        def array = line.split(":")
+        if(array.length == 2){
+            def name = array[0]
+            def url = array[1]
+            map.put(name, url)
         }
     }
+
+    productFlavors {
+        map.each {name, value ->
+            "$name" {
+                buildConfigField("String","CHANNEL_NAME","\"$name\"")
+                buildConfigField("String","DOWNLOAD_URL","\"$value\"")
+            }
+        }
+    }
+
 }
+
+
 
 
 dependencies {
@@ -48,12 +71,12 @@ dependencies {
     compile 'com.liulishuo.filedownloader:library:1.3.0'
     compile 'io.reactivex:rxjava:1.2.2'
     compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'com.squareup.okhttp3:okhttp:3.4.2'
+//    compile 'com.squareup.okhttp3:okhttp:3.4.2'
     //    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     testCompile 'junit:junit:4.12'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.0@aar'
 
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+//    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+//    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+//    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 }
