proguard and productFlavors

--- a/project/demo/build.gradle
+++ b/project/demo/build.gradle
@@ -17,18 +17,33 @@ android {
         targetSdkVersion 25
         versionCode 2
         versionName "1.1"
-        setProperty("archivesBaseName", "cqxx-$versionName")
+//        setProperty("archivesBaseName", "cqxx-$versionName")
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-    buildTypes {
+
+    signingConfigs {
         debug {
-            buildConfigField("String","CHANNEL","\"DEBUG\"")
-            buildConfigField("String","DOWNLOAD_URL","\"https://l.pic.wemepi.com/data.x/spread/app/cqxx/00001037.apk?t=1479354618\"")
+
         }
         release {
+            storeFile file(readProperty("key.store", "key.store"))
+            keyAlias readProperty("key.alias", "key.alias")
+            keyPassword readProperty("key.alias.password", "key.alias.password")
+            storePassword readProperty("key.store.password", "key.store.password")
+        }
+    }
+
+    buildTypes {
+//        debug {
+//            buildConfigField("String","CHANNEL","\"DEBUG\"")
+//            buildConfigField("String","DOWNLOAD_URL","\"https://l.pic.wemepi.com/data.x/spread/app/cqxx/00001037.apk?t=1479354618\"")
+//        }
+        release {
+
             shrinkResources true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
 
     }
@@ -36,27 +51,40 @@ android {
     def file = new File("./demo/flavors.txt");
     def map = [:];
     file.eachLine { line ->
-
-        def array = line.split(":")
-        if(array.length == 2){
+        def array = line.split("#")
+        if (array.length == 2) {
             def name = array[0]
             def url = array[1]
             map.put(name, url)
         }
+
     }
 
     productFlavors {
-        map.each {name, value ->
+        map.each { name, value ->
             "$name" {
-                buildConfigField("String","CHANNEL_NAME","\"$name\"")
-                buildConfigField("String","DOWNLOAD_URL","\"$value\"")
+                applicationId "com.weme.sd.plugin"
+                buildConfigField("String", "CHANNEL_NAME", "\"$name\"")
+                buildConfigField("String", "DOWNLOAD_URL", "\"$value\"")
             }
         }
     }
 
+
 }
 
+def readProperty(key, defaultValue) {
+    def value = System.getenv(key)
+    if (value != null && value.length() > 0) {
+        println "$key, $value"
+        return value
+    }
 
+    if (project.hasProperty(key)) {
+        return project.property(key)
+    }
+    return defaultValue
+}
 
 
 dependencies {
