--- a/project/demo/build.gradle
+++ b/project/demo/build.gradle
@@ -9,6 +9,7 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
@@ -16,8 +17,8 @@ android {
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 2
-        versionName "1.1"
-//        setProperty("archivesBaseName", "cqxx-$versionName")
+        versionName "1.3.0"
+        setProperty("archivesBaseName", "cqxx-$versionName")
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -63,7 +64,8 @@ android {
     productFlavors {
         map.each { name, value ->
             "$name" {
-                applicationId "com.weme.sd.plugin"
+                targetSdkVersion 22
+                applicationId "com.weme.group.sd.plugin"
                 buildConfigField("String", "CHANNEL_NAME", "\"$name\"")
                 buildConfigField("String", "DOWNLOAD_URL", "\"$value\"")
             }
@@ -83,6 +85,7 @@ def readProperty(key, defaultValue) {
     if (project.hasProperty(key)) {
         return project.property(key)
     }
+
     return defaultValue
 }
 
