fix build params

--- a/project/Libraries/DroidPlugin/build.gradle
+++ b/project/Libraries/DroidPlugin/build.gradle
@@ -29,4 +29,11 @@ android {
         abortOnError false
     }
     buildToolsVersion '25.0.0'
+    defaultConfig {
+        def authorityName = "com.wkswind.droidplugin_stub"
+        buildConfigField "String","AUTHORITY_NAME","\"${authorityName}\""
+        manifestPlaceholders = [
+                authorityName : "$authorityName"
+        ]
+    }
 }
