--- a/project/demo/src/main/AndroidManifest.xml
+++ b/project/demo/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.wkswind.demo">
-
+    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS"
+        tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.LOCATION_HARDWARE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="com.jpush.unity3dplugin.permission.JPUSH_MESSAGE" />
     <uses-permission android:name="com.szjzwl.xytx.tt.permission.JPUSH_MESSAGE" />
