--- a/project/demo/build.gradle
+++ b/project/demo/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.application'
-
+def VERSION = "1.3.1"
 android {
+//    lintOptions {
+//        lintConfig
+//    }
     compileOptions {
         incremental true
     }
@@ -14,11 +17,12 @@ android {
     buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "com.wkswind.demo"
-        minSdkVersion 21
+        minSdkVersion 14
         targetSdkVersion 25
-        versionCode 2
-        versionName "1.3.0"
-        setProperty("archivesBaseName", "cqxx-$versionName")
+        versionCode 4
+
+        versionName VERSION
+        setProperty("archivesBaseName", "cqxx-$versionName-$versionCode")
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -27,6 +31,7 @@ android {
 
         }
         release {
+            v2SigningEnabled false
             storeFile file(readProperty("key.store", "key.store"))
             keyAlias readProperty("key.alias", "key.alias")
             keyPassword readProperty("key.alias.password", "key.alias.password")
@@ -36,15 +41,18 @@ android {
 
     buildTypes {
 //        debug {
+//            versionNameSuffix ".debug"
+//        }
+//        debug {
 //            buildConfigField("String","CHANNEL","\"DEBUG\"")
 //            buildConfigField("String","DOWNLOAD_URL","\"https://l.pic.wemepi.com/data.x/spread/app/cqxx/00001037.apk?t=1479354618\"")
 //        }
         release {
-
             shrinkResources true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
+//            v2SigningEnabled false
         }
 
     }
@@ -66,6 +74,7 @@ android {
             "$name" {
                 targetSdkVersion 22
                 applicationId "com.weme.group.sd.plugin"
+//                applicationId "com.weme.group.sd.plugin.C$name"
                 buildConfigField("String", "CHANNEL_NAME", "\"$name\"")
                 buildConfigField("String", "DOWNLOAD_URL", "\"$value\"")
             }
@@ -85,7 +94,6 @@ def readProperty(key, defaultValue) {
     if (project.hasProperty(key)) {
         return project.property(key)
     }
-
     return defaultValue
 }
 
